# retargeting-implementation

./: .gitignore  README.md  dune  dune-project
docs/: README.md  benchmarks.md
docs/data/: bench-paper-rep1.tsv  bench-paper-rep2.tsv  bench-paper-rep3.tsv
docs/data/archive-submitted/: README.md  ab-fib.tsv  rep1.tsv  rep2.tsv  rep3.tsv
lib/: domain_intf.ml  domain_rtg.ml  dune  interp_st.ml  label.ml  partition.ml  projection.ml  s_abstract.ml  s_ast.ml  s_cek.ml  s_grammar.mly  s_lexer.mll  s_parser.ml  s_syntax.ml  t_ast.ml  t_encoding.ml  t_grammar.mly  t_lexer.mll  t_machine.ml  t_parser.ml
lib/analysis/: partition.ml  projection.ml  role.ml  role_pe.ml  s_abstract.ml
lib/domain/: domain_dis.ml  domain_intf.ml  domain_rtg.ml
lib/s/: dune  s_cek.ml  s_grammar.mly  s_lexer.mll  s_parser.ml  s_syntax.ml
lib/specialize/: calc_pe.ml
lib/t/: dune  t_ast.ml  t_encoding.ml  t_grammar.mly  t_lexer.mll  t_machine.ml  t_parser.ml
lib_gen/: dune  gen_calc.ml  generated_calc.ml
programs/: algo_fact_deep.t  algo_power2.t  fx2_ackermann.t  fx2_church.t  fx2_collatz.t  fx2_fermat.t  fx2_gcd.t  fx2_lattice.t  fx2_mbrotz.t  fx2_mccarthy91.t  fx2_rsa.t  fx2_solovay.t  fx2_tak.t  sai_fib.t
scripts/: check-programs.sh  kick-tires.sh  reproduce-table.sh  run-gen-calc.sh
staging/: calc_stage.ml
tests/: dune  test_calc_pe.ml  test_corpus.ml  test_gen_calc.ml  test_main.ml  test_projection.ml  test_util.ml
tests/corpus/s/: 01_arith.s  02_let_chain.s  03_iszero_true.s  04_iszero_false.s  05_cons_match.s  06_fact.s  07_countdown.s  08_pair_value.s  09_negate.s  (+23 more)
(+65 files in other folders)
